--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title data-i18n="title">كيان الخليج | الصفحة الرئيسية</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="assets/WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg" type="image/jpeg">
+  <link rel="icon" href="WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg" type="image/jpeg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body lang="ar">
@@ -57,7 +57,7 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <img src="assets/Screenshot 2025-07-20 213250_1753036605407.png" alt="خلفية كيان الخليج" class="hero-bg-img">
+    <img src="Screenshot 2025-07-20 213250_1753036605407.png" alt="خلفية كيان الخليج" class="hero-bg-img">
     <h1 data-i18n="hero_title">كيان الخليج للصناعة</h1>
     <p data-i18n="hero_subtitle">رؤية هندسية متطورة</p>
     <a href="products.html" class="btn btn-primary" data-i18n="browse_products">تصفح منتجاتنا</a>
