--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
       </div>
     </div>
   </footer>
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer>6LeTuIorAAAAABEV18FyyA22JDwnNwEyoxdUZpCX</script>
   <script src="main.js"></script>
 </body>
 </html> 
