--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,10 @@
   </header>
 
   <!-- Contact Section -->
+<form
+  action="https://formspree.io/f/mpwlqgno"
+  method="POST"
+>
   <div class="contact-section">
     <div class="contact-box">
       <h1>تواصل معنا</h1>
