--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="top-bar-right">
         <span><i class="fa-solid fa-location-dot"></i> <span data-i18n="address">الرياض، طريق الملك عبدالعزيز</span></span>
-        <span><i class="fa-solid fa-envelope"></i> <span data-i18n="email">kayanalkhalij.eng1@gmail.com</span></span>
+        <span><i class="fa-solid fa-envelope"></i> <span data-i18n="email">info@kayanfactory.com</span></span>
         <span><i class="fa-solid fa-phone"></i> <span data-i18n="phone">966545666924+</span></span>
       </div>
       <div class="lang-switcher">
@@ -120,7 +120,7 @@
         
         <div>
           <b data-i18n="email_label">البريد الإلكتروني:</b>
-          <span data-i18n="email">kayanalkhalij.eng1@gmail.com</span>
+          <span data-i18n="email">info@kayanfactory.com</span>
         </div>
         
         <div>
