--- a/about.html
+++ b/about.html
@@ -15,8 +15,13 @@
     <div class="container">
       <div class="top-bar-right">
         <span><i class="fa-solid fa-location-dot"></i> <span data-i18n="address">الرياض، طريق الملك عبدالعزيز</span></span>
-        <span><i class="fa-solid fa-envelope"></i> <span data-i18n="email">kayanalkhalij.eng1@gmail.com</span></span>
-        <span><i class="fa-solid fa-phone"></i> <span data-i18n="phone">966545666924+</span></span>
+        <span class="top-bar-item">
+          <i class="fa-solid fa-envelope"></i>
+          <a href="mailto:info@kayanfactory.com" class="top-bar-link" data-i18n="email">info@kayanfacory.com</a>
+        </span>
+        <span class="top-bar-item">
+          <i class="fa-solid fa-phone"></i>
+          <a href="tel:+966545666924" class="top-bar-link" data-i18n="phone">966545666924+</a>
       </div>
       <div class="lang-switcher">
         <button id="lang-toggle" class="lang-btn"><span class="flag">🇸🇦</span> <span data-i18n="arabic">العربية</span></button>
