--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
     <div class="container">
       <div class="top-bar-right">
         <span class="top-bar-item"><i class="fa-solid fa-location-dot"></i><span>الرياض، طريق الملك عبدالعزيز</span></span>
-        <span class="top-bar-item"><i class="fa-solid fa-envelope"></i><a href="mailto:kayanalkhalij.eng1@gmail.com" class="top-bar-link">kayanalkhalij.eng1@gmail.com</a></span>
+        <span class="top-bar-item"><i class="fa-solid fa-envelope"></i><a href="mailto:info@kayanfactory.com" class="top-bar-link">info@kayanfactory.com</a></span>
         <span class="top-bar-item"><i class="fa-solid fa-phone"></i><a href="tel:+966545666924" class="top-bar-link">+966545666924</a></span>
       </div>
       <div class="lang-switcher">
