--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@
         </span>
         <span class="top-bar-item">
           <i class="fa-solid fa-envelope"></i>
-          <a href="mailto:kayanalkhalij.eng1@gmail.com" class="top-bar-link" data-i18n="email">kayanalkhalij.eng1@gmail.com</a>
+          <a href="mailto:info@kayanfactory.com" class="top-bar-link" data-i18n="email">info@kayanfactory.com</a>
         </span>
         <span class="top-bar-item">
           <i class="fa-solid fa-phone"></i>
