--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@
           <i class="fa-solid fa-envelope" style="color:#1565c0;"></i>
           <b>البريد الإلكتروني:</b>
         </div>
-        <a href="mailto:kayanalkhalij.eng1@gmail.com" style="color:#1565c0;text-decoration:underline;margin-right:28px;word-break:break-all;">kayanalkhalij.eng1@gmail.com</a>
+        <a href="mailto:info@kayanfactory.com" style="color:#1565c0;text-decoration:underline;margin-right:28px;word-break:break-all;">info@kayanfactory.com</a>
         <div style="font-size:1.08rem;display:flex;align-items:center;gap:8px;">
           <i class="fa-solid fa-phone" style="color:#1565c0;"></i>
           <b>رقم الشركة:</b>
