--- a/contact.html
+++ b/contact.html
@@ -167,8 +167,8 @@
           <b>ساعات العمل:</b>
         </div>
         <div style="margin-right:28px;line-height:1.7;">
-          الأحد - الخميس: 8:00 ص - 6:00 م<br>
-          الجمعة - السبت: 9:00 ص - 2:00 م
+          السبت - الخميس: 8:00 ص - 6:00 م<br>
+          الجمعة: مغلق
         </div>
         <div style="font-size:1.08rem;display:flex;align-items:center;gap:8px;">
           <i class="fa-solid fa-globe" style="color:#1565c0;"></i>
